--- a/Dcase2017_task2_tech_report.tex
+++ b/Dcase2017_task2_tech_report.tex
@@ -81,11 +81,18 @@ One, two, three, four, five
 \label{sec:intro}
 
 \label{sec:format}
-2 aprole su soude evet det
-2 parole su nostri lavori novelty + (fall detection)
-2 parole su dcase daaset + ref a loro
+%2 aprole su soude evet det
+%2 parole su nostri lavori novelty + (fall detection)
+%2 parole su dcase daaset + ref a loro
 
 
+The field of computational auditory scene analysis (CASA) cover many topics. Nowadays, one of the most importat topic is the automatic sound event detection (SED). SED is defined as the task of analysing a continuous audio
+signal in order to extract a description of the sound events
+occurring in the audio stream. This description is commonly
+expressed as a label that marks the start, the ending, and the
+nature of the occurred sound (e.g., children crying, cutlery,
+glass jingling).
+Task 2 of DCASE challange 2017 \cite{dcase2017web} consists in determining the precise onset of three types of sounds: babycry, glassbreak and gunshoot. 
 
 \section{Proposed Method}
 \label{sec:pagelimit}
