--- a/refs.bib
+++ b/refs.bib
@@ -46,3 +46,27 @@
   howpublished = {{PDF} specification for {IEEE} {X}plore,
     \url{https://www2.securecms.com/ICASSP2015/papers/PaperFormat/Author-PDF-Guide-V32.pdf}}
 }
+
+@inproceedings{DCASE2017challenge,
+	Author = "Mesaros, A. and Heittola, T. and Diment, A. and Elizalde, B. and Shah, A. and Vincent, E. and Raj, B. and Virtanen, T.",
+	title = "{DCASE} 2017 Challenge Setup: Tasks, Datasets and Baseline System",
+	booktitle = "Proceedings of the Detection and Classification of Acoustic Scenes and Events 2017 Workshop (DCASE2017)",
+	month = "November",
+	note = "submitted",
+	year = "2017",
+	keywords = "Sound scene analysis, Acoustic scene classification, Sound event detection, Audio tagging, Rare sound events"
+}
+
+@ARTICLE{Rumelhart86-LRB,
+	author = {{Rumelhart}, D.~E. and {Hinton}, G.~E. and {Williams}, R.~J.
+	},
+	title = {Learning representations by back-propagating errors},
+	journal = {Nature},
+	year = 1986,
+	month = Oct,
+	volume = 323,
+	pages = {533-536},
+	doi = {10.1038/323533a0},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
