--- a/refs.bib
+++ b/refs.bib
@@ -150,3 +150,26 @@
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Mesaros2016_MDPI,
+	author = "Mesaros, Annamaria and Heittola, Toni and Virtanen, Tuomas",
+	doi = "10.3390/app6060162",
+	title = "Metrics for Polyphonic Sound Event Detection",
+	url = "http://www.mdpi.com/2076-3417/6/6/162",
+	journal = "Applied Sciences",
+	issn = "2076-3417",
+	number = "6",
+	pages = "162",
+	volume = "6",
+	year = "2016"
+}
+
+@article{bergstra2012random,
+	title={Random search for hyper-parameter optimization},
+	author={Bergstra, James and Bengio, Yoshua},
+	journal={Journal of Machine Learning Research},
+	volume={13},
+	number={Feb},
+	pages={281--305},
+	year={2012}
+}
+
