--- a/Dcase2017_task2_tech_report.tex
+++ b/Dcase2017_task2_tech_report.tex
@@ -171,19 +171,19 @@ risultato finale 0.23
 Fig.~\ref{fig:results}. 
 
 % Below is an example of how to insert images. 
-% -------------------------------------------------------------------------
-\begin{figure}[t]
-  \centering
-  \centerline{\includegraphics[width=\columnwidth]{fig1a}}
-  \caption{Example of a figure with experimental results.}
-  \label{fig:results}
-\end{figure}
-
-\begin{equation}
-  \label{eqn:wave_equation}
-    \Delta^2p(x,y,z,t)-
-    \displaystyle\frac{1}{c^2}\frac{\partial^2p(x,y,z,t)}{\partial t^2}=0,
-\end{equation}
+%% -------------------------------------------------------------------------
+%\begin{figure}[t]
+%  \centering
+%  \centerline{\includegraphics[width=\columnwidth]{fig1a}}
+%  \caption{Example of a figure with experimental results.}
+%  \label{fig:results}
+%\end{figure}
+%
+%\begin{equation}
+%  \label{eqn:wave_equation}
+%    \Delta^2p(x,y,z,t)-
+%    \displaystyle\frac{1}{c^2}\frac{\partial^2p(x,y,z,t)}{\partial t^2}=0,
+%\end{equation}
 
 
 
