--- a/refs.bib
+++ b/refs.bib
@@ -194,3 +194,30 @@ number = "11",
 	year={2012}
 }
 
+@article{srivastava2014dropout,
+	title={Dropout: A simple way to prevent neural networks from overfitting},
+	author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+	journal={The Journal of Machine Learning Research},
+	volume={15},
+	number={1},
+	pages={1929--1958},
+	year={2014},
+	publisher={JMLR. org}
+}
+
+@article{zeiler2012adadelta,
+	title={ADADELTA: an adaptive learning rate method},
+	author={Zeiler, Matthew D},
+	journal={arXiv preprint arXiv:1212.5701},
+	year={2012}
+}
+
+@article{duchi2011adaptive,
+	title={Adaptive subgradient methods for online learning and stochastic optimization},
+	author={Duchi, John and Hazan, Elad and Singer, Yoram},
+	journal={Journal of Machine Learning Research},
+	volume={12},
+	number={Jul},
+	pages={2121--2159},
+	year={2011}
+}
